fixed nav and spacing

--- a/master.css
+++ b/master.css
@@ -177,7 +177,7 @@ margin-top: 2%;
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  margin: .5% auto auto;
+  margin: .5% auto 1%;
 }
 .workshop{
   width: 100%;
@@ -199,6 +199,8 @@ margin-top: 2%;
 .updates{
   width: 80%; 
   height: auto;
+  background-color: #200a33;
+  color: #f8f9fa;
 }
 .updates h1{
   text-align: center;
